# cookiecutter-python-project

./: .gitignore  README.md  cookiecutter.json
{{cookiecutter.project_directory_name}}/: .isort.cfg  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  mypy.ini  pyproject.toml  tox.ini
{{cookiecutter.project_directory_name}}/{{cookiecutter.project_slug}}/: {{cookiecutter.project_slug}}.py
