[tool.poetry]
name = {{cookiecutter.project_slug}}
version = "0.1.0"
description = {{cookiecutter.project_short_description}}
authors = [{{cookiecutter.full_name}} <{{cookiecutter.email}}>,]

[tool.poetry.dependencies]
python = "^{{cookiecutter.python_version}}"

[tool.poetry.group.dev.dependencies]
mypy = "^0.982"
isort = "^5.10.1"
pre-commit = "^2.20.0"
black = "^22.10.0"
pylint = "^2.15.4"
pytest = "^7.1.3"
tox = "^3.26.0"
tox-poetry = "^0.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
